# django-2021

./: .gitignore  Pipfile  Procfile  README.md  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
answer/: asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
portal/: admin.py  models.py  urls.py  views.py
portal/migrations/: 0001_initial.py  0002_auto_20210822_0844.py  0003_auto_20210825_1512.py  0004_auto_20210825_1513.py  0005_auto_20210825_1530.py  0006_auto_20210828_0342.py  0007_auto_20210924_0407.py  0008_auto_20210924_0525.py  0009_auto_20210924_0526.py  0010_auto_20210924_0822.py  0011_auto_20210924_0836.py  0012_auto_20210924_0843.py
portal/templates/: course.html  hello.html  index.html
