[tool.poetry]
name = "django-2021"
version = "0.1.0"
description = ""
authors = ["axlchen"]
readme = "README.md"
packages = [{include = "django_2021"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
django-debug-toolbar = "^3.7.0"
django-jazzmin = "^2.6.0"
django-adminlte-3 = "^0.1.6"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
